[package]
categories = ["science"]
description = "Collection of modules used for working with quantum programs and circuits"
documentation = "https://docs.rs/qurust"
edition = "2021"
keywords = ["quantum-programming", "qasm"]
license = "MIT"
name = "qurust"
readme = "README.md"
repository = "https://github.com/rust-lang/cargo/"
version = "0.1.0"

[dev-dependencies]
version-sync = "0.9.5"

[badges.maintenance]
status = "actively-developed"
