[package]
categories = ["science"]
description = "Collection of modules used for working with quantum programs and circuits"
documentation = "https://docs.rs/qurust"
edition = "2021"
keywords = ["quantum-programming", "qasm"]
license = "MIT"
name = "qurust"
readme = "README.md"
repository = "https://github.com/crabster/qurust"
version = "0.1.0"

[dev-dependencies]
version-sync = "0.9.5"

[dependencies]
antlr-rust = "0.3.0-beta"
indent = "0.1.1"
indoc = "2.0.3"
regex = "1.10.4"

[badges.maintenance]
status = "actively-developed"
